--- a/frontend/src/Components/CreateLot/CreateLot.css
+++ b/frontend/src/Components/CreateLot/CreateLot.css
@@ -1,15 +1,15 @@
-.price-category {
+.starting_price-category {
     display: flex;
     align-items: center;
     margin-top: 36px;
 }
 
-.price-div {
+.starting_price-div {
     width: 204px;
     height: 161px;
 }
 
-.price-input {
+.starting_price-input {
     margin-left: 53px;
     width: 125px;
     height: 30px;
@@ -17,7 +17,7 @@
     border: none;
     outline: none;
     border-color: transparent;
-    
+
     color: black;
     font-family: 'Montserrat';
     font-weight: 700;
@@ -26,14 +26,44 @@
     padding-left: 10px;
 }
 
-.price-input::placeholder {
+.starting_price-input::placeholder {
     color: #D9D9D9;
 }
 
-.price-caption {
+.starting_price-caption {
     font-weight: 600;
     margin-left: 53px;
     margin-bottom: 15px;
+}
+
+.duration-div {
+    margin-left: 53px;
+    margin-top: 15px;
+}
+
+.duration-caption {
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+
+.duration-input {
+    width: 125px;
+    height: 30px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    border-color: transparent;
+
+    color: black;
+    font-family: 'Montserrat';
+    font-weight: 700;
+    font-size: 18px;
+    background: #FFC700;
+    padding-left: 10px;
+}
+
+.duration-input::placeholder {
+    color: #D9D9D9;
 }
 
 .category-div {
@@ -50,7 +80,7 @@
 .category-choice1 {
     display: flex;
     align-items: center;
-    justify-content: space-between; 
+    justify-content: space-between;
     margin-left: 23px ;
     margin-right: 53px;
 }
@@ -58,7 +88,7 @@
 .category-choice2 {
     display: flex;
     align-items: center;
-    justify-content: space-between; 
+    justify-content: space-between;
     margin-left: 23px ;
     margin-right: 53px;
 }
@@ -82,7 +112,7 @@
     margin-right: 10px;
     margin-bottom: 10px;
     cursor: pointer;
-    
+
     color: black;
     font-family: 'Montserrat';
     font-weight: 700;
@@ -96,23 +126,23 @@
     background: #C7D8FB;
 }
 
-.description-photo {
+.descriptioniption-image_url {
     display: flex;
     align-items: center;
 }
 
-.descr-div {
+.description-div {
     width: 460px;
     height: 100px;
     margin-left: 53px;
 }
 
-.descr-caption {
+.description-caption {
     font-weight: 600;
     margin-bottom: 15px;
 }
 
-.descr-text {
+.description-text {
     display: flex;
     text-align: start;
     padding-left: 10px;
@@ -128,29 +158,28 @@
     font-weight: 600;
 }
 
-.descr-text::placeholder {
+.description-text::placeholder {
     color: #D9D9D9;
 }
 
-.photo-div {
+.image_url-div {
     width: 587px;
     height: 100px;
     margin-left: 23px;
 }
 
-.photo-caption {
+.image_url-caption {
     font-weight: 600;
     margin-bottom: 15px;
-
     font-size: 13px;
 }
 
-.photo-div-components {
+.image_url-div-components {
     display: flex;
     align-items: start;
 }
 
-.lot-photo-edit-page {
+.lot-image_urlde-edit-page {
     width: 98px;
     height: 74px;
     background: #FFC700;
